# satellite-images-inference

./: .pre-commi-config.yaml  .pre-commit-config.yaml  Dockerfile  README.md  analyse_pred.ipynb  calcul_intersection.ipynb  exemple_git.txt  exemple_git2.txt  injection_donnees_geoserver.sh  partie_trois.ipynb  polygoniser_les_masques_de_batiments.py  presentation.ipynb  pyproject.toml  requirements.txt  setup.sh  test.md  test_clem.ipynb  travaux_intersection_ilot_pred.ipynb  tyguhi.ipynb  xxx.ipynb
app/: __init.py  __init__.py  logger_config.py  main.py  utils.py
argo-cd/: template-argocd-api.yaml  template-argocd-geoserver.yaml  template-argocd.yaml
argo-workflows/: constructions_destructions.yaml  predict-workflows.yaml  train-and-predict.yaml
bash/: copy_to_geoserver.sh  copy_to_geoserver2.sh  download_pleiades_ign.sh  download_seas_data.sh  mc_filter.sh  remplissage_geoserver_manuel.sh
deployment/: deployment.yaml  ingress.yaml  service.yaml
deployment-api/: deployment.yaml  ingress.yaml  service.yaml
deployment-geoserver/: configmap.yaml  ingress.yaml  pvc_extension.yaml  pvc_geoserver.yaml  pvc_geowebcache.yaml  service.yaml  statefulset.yaml
deployment_geoserver/: ingress.yaml  ingress2.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
fiichiers_deploiements_adhoc/: injection_donnees.yaml  pvc_update.yaml  statefulset.yaml
helm_geoserver_ol/: .gitignore  Chart.yaml  values.yaml
src/: analyze_stats_mayotte.py  build_filename_to_polygons.py  clean_predictions.py  constructions_destructions.py  differences_avec_nettoyage.ipynb  (+12 more)
(+18 files in other folders)
